src/plugins/debugger/watchhandler.cpp
@@ -1017,8 +1017,13 @@ TypeFormatList WatchModel::typeFormatList(const WatchData &data) const
         formats.append(Array1000Format);
         formats.append(Array10000Format);
     } else if (data.type.contains("char[") || data.type.contains("char [")) {
+        formats.append(RawFormat);
         formats.append(Latin1StringFormat);
+        formats.append(SeparateLatin1StringFormat);
         formats.append(Utf8StringFormat);
+        formats.append(SeparateUtf8StringFormat);
+        formats.append(Local8BitStringFormat);
+        formats.append(Utf16StringFormat);
         formats.append(Ucs4StringFormat);
     }
 
